--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.23.5",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.4"
+    "gulp-useref": "^3.1.4",
+    "run-sequence": "^2.2.1"
   }
 }
